fix z-index

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -217,8 +217,8 @@ input[type=checkbox]
   margin-right 10px
 
 #resizer
-  position: absolute
-  z-index:100
+  position absolute
+  z-index 8
   width 10px
   background gray
   cursor: ew-resize
